package in.itkaran.lld1130624.lld2.strategy;

public class BikePathCalculator implements PathCalculator {
    @Override
    public void findPath(String source, String target) {
        System.out.println("BikePathCalculator source: " + source + " target: " + target);
    }
}
