package in.itkaran.lld1130624.lld2.strategy;

public enum ModeType {
    CAR,
    BIKE,
    WALK
}
