package in.itkaran.lld1130624.lld2.strategy;

public interface PathCalculator {
    void findPath(String source, String target);
}
