package in.itkaran.lld1130624.lld2.strategy;

public class WalkPathCalculator implements PathCalculator {
    @Override
    public void findPath(String source, String target) {
        System.out.println("Walking path from " + source + " to " + target);

    }
}
